# SimpleTaskManager

./: .gitignore  CMakeLists.txt  README.md  SimpleTaskManagerConfig.cmake.in  TaskManagerConfig.cmake.in
.cache/clangd/index/: Holder.cpp.A21084C0B6F15DD1.idx  Holder.h.15E236BBF39161F0.idx  Holder.h.AF7908601BF6B558.idx  Scheduler.cpp.1A1F79C916D14446.idx  Scheduler.h.16D02E701DE8BC7B.idx  Scheduler.h.5FD9108409A46AED.idx  Task.h.00C14D5B0E8D3AC0.idx  Task.h.522D9B0B3591F555.idx  TaskJoiner.h.5D3D2A7561219F50.idx  TaskJoiner.h.8CF43A91A203D75B.idx  TaskQueue.cpp.78A99F503CC60E2B.idx  TaskQueue.h.353417E249E073DD.idx  TaskQueue.h.F32322059C3AFBE5.idx  TaskTraits.h.22FE6BD82199FE3B.idx  TaskTraits.h.7654B361C1871BA8.idx  main.cpp.155D5669CADA1BCE.idx  make_task.h.549CC971846829CA.idx  make_task.h.597A23094DE739F9.idx
src/: CMakeLists.txt  Holder.cpp  Scheduler.cpp  TaskQueue.cpp  main.cpp
src/include/SimpleTaskManager/: Holder.h  Scheduler.h  Task.h  TaskFilter.h  TaskJoiner.h  TaskQueue.h  TaskTraits.h  make_task.h
src/include/TaskManager/: Holder.h  Scheduler.h  Task.h  TaskJoiner.h  TaskQueue.h  TaskTraits.h  make_task.h
